<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/carbon_blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:backgroundTint="@color/black"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edit"
                android:drawableTintMode="add"
                android:textStyle="bold"
                android:autofillHints="emailAddress"
                android:drawablePadding="8dp"
                android:hint="@string/user"
                android:textColorHint="@color/celeste"
                android:padding="8dp"
                android:textColor="@color/celeste"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="password"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit"
                android:drawableTintMode="add"
                android:drawablePadding="4dp"
                android:hint="@string/pass"
                android:textStyle="bold"
                android:textColorHint="@color/celeste"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/celeste"
                android:textColorHighlight="@color/cardview_dark_background" />


            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/carbon_blue"
                android:textColor="@color/white"
                android:text="@string/next"
                android:textSize="18sp"
                app:cornerRadius="40dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="8dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/celeste"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>