<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/wave" />

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/logo_d_t"
            android:transitionName="splash_img_second" />

    </RelativeLayout>


    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:text="@string/welcome"
        android:textColor="@color/ThemePrincipalColor"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingEnd="20sp"
        android:paddingStart="20sp"
        android:fontFamily="@font/rubik_light"
        android:text="@string/login"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:padding="20dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUser"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/user"
            android:padding="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/baseline_person_outline_24"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/pass"
            android:padding="5dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/password_toggle_enabled"
            app:startIconDrawable="@drawable/baseline_password_24"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:fontFamily="@font/rubik_medium"
            android:background="#00000000"
            android:elevation="0dp"
            android:textColor="@color/black"
            android:text="@string/forget_password" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:height="60dp"
            android:backgroundTint="@color/ThemePrincipalColor"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/next"
            android:textColor="@color/white"
            app:cornerRadius="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:fontFamily="@font/rubik_medium"
            android:elevation="0dp"
            android:text="@string/new_user_sign_up"
            android:textColor="#000" />

    </LinearLayout>


</LinearLayout>