<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegisterFragment"
    android:orientation="vertical"
    android:background="@color/yellow"
    android:gravity="center_horizontal"
    android:padding="@dimen/common_padding_default">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_top_account_register"
        >

        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:fontFamily="@font/planetncompact"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:transitionName="transition_title_text" />

        <TextView
            android:id="@+id/signup_slide_text"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_black_border"
            android:gravity="center"
            android:padding="10dp"
            android:text="Ap"
            android:fontFamily="@font/planetnv2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:transitionName="transition_slide_text"/>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/baseline_drive_file_rename_outline_24"
            app:startIconTint="@color/black"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textPersonName"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nss"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/baseline_numbers_24"
            app:startIconTint="@color/black"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/baseline_email_24"
            app:startIconTint="@color/black"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>



</LinearLayout>